--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Stripe","Stripe", "Payment")</li>
+                    <li>@Html.ActionLink("PayPal", "PayPal", "Payment")</li>
                 </ul>
             </div>
         </div>
